--- a/src/components/AboutMe/Detail/Detail.css
+++ b/src/components/AboutMe/Detail/Detail.css
@@ -1,3 +1,14 @@
 .Detail-li {
   text-align: left;
+  padding-left: 10px;
+  padding-top: 10px;
+  font-size: 17px;
+}
+
+@media only screen  and (max-width:600px) {
+  .Detail-li {
+  padding-left: 5px;
+  padding-right: 30px;
+
+}
 }
