--- a/src/components/MainPage/Project/Project.css
+++ b/src/components/MainPage/Project/Project.css
@@ -7,8 +7,19 @@
 
   flex-basis: 40%;
   flex-shrink: 0;
+  /* width: 100px; */
 }
 
 .Project-CardHeader {
-  min-height: 360px;
+  min-height: 200px;
+}
+
+@media only screen  and (max-width:600px) {
+ 
+  .Project-card {
+   margin-bottom: 20px;
+    width: 90%;
+    /* text-align: right; */
+  
+  }
 }
