--- a/src/components/MainPage/Projects/Projects.css
+++ b/src/components/MainPage/Projects/Projects.css
@@ -6,7 +6,42 @@
   overflow-x: scroll;
   /* overflow-y: scroll; */
   /* min-width: 80px; */
-  width: 100%;
+  width: 90vw;
   /* hight: 400px;
   flex-wrap: nowrap; */
+  /* height: 90%; */
+
+   /* height: 100vh;
+    border: 3px;
+    box-sizing: border-box; */
+ 
+
+}
+
+
+
+@media only screen  and (max-width:600px) {
+ .Projects-mainContainer{
+      /* height: calc(100vh - 10px); */
+
+ }
+  .Projects-projectContainer {
+    display: block;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+  
+  
+
+    /* overflow-y: scroll; */
+    /* min-width: 80px; */
+
+    overflow: hidden;
+    overflow-y: scroll;
+    width: 100%;
+    height:100vh;
+    /* height: calc(100vh - 3px); */
+    /* hight: 400px;
+    flex-wrap: nowrap; */
+   
+  
+  }
 }
