--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -49,7 +49,7 @@
       rgba(255, 255, 255, 0.7),
       rgba(255, 255, 255, 0.7)
     ),
-    url("../../images/resume-6627200.jpg");
+    url("../../images/resume-6627200_1280-small.jpg");
   background-size: cover;
   height: 100vh;
   /* padding: 20px; */
