--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -63,7 +63,6 @@
   margin-left: 30px;
   color:crimson;
   font-size: 35px;
- 
 
   
 }
@@ -85,12 +84,17 @@ color: darkgreen;
 .AboutMe-ulDetails {
   /* margin-left: auto;
   margin-right: auto; */
+  margin: 0;
   margin-left: 20%;
   display: table;
 }
 
 .AboutMe-aboutMeTitle {
   justify-content: left;
+  font-size: 5vh;
+  margin-top: 4vh;
+  margin-bottom: 2vh;
+
   /* margin-left: 0px; */
 }
 
@@ -113,8 +117,10 @@ color: darkgreen;
     /* justify-content: left; */
     text-align: left;
 
-    font-size: 20px;
+    font-size: 3vh;
+    
     margin-left: 50px;
+    
   }
   .AboutMe-myCvTitle{
     text-align: left;
