--- a/src/components/AboutMe/Detail/Detail.css
+++ b/src/components/AboutMe/Detail/Detail.css
@@ -2,13 +2,13 @@
   text-align: left;
   padding-left: 10px;
   padding-top: 10px;
-  font-size: 17px;
+  font-size: 4vh;
 }
 
 @media only screen  and (max-width:600px) {
   .Detail-li {
   padding-left: 5px;
   padding-right: 30px;
-
+  font-size: 2.5vh;
 }
 }
