--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -45,13 +45,18 @@
 }
 
 .AboutMe-mainPage {
-  background: linear-gradient(
+  /* background: linear-gradient(
       rgba(255, 255, 255, 0.7),
       rgba(255, 255, 255, 0.7)
     ),
     url("../../images/resume-6627200_1280-small.jpg");
-  background-size: cover;
-  height: 100vh;
+  background-size: cover; */
+
+  /* height: 100vh;   */
+
+/* 
+  background-color: #f8f9d2;
+background-image: linear-gradient(315deg, #f8f9d2 0%, #e8dbfc 74%); */
   /* padding: 20px; */
   /* margin-bottom: 0; */
 }
@@ -61,13 +66,13 @@
   /* display: flex; */
   /* float: right; */
   margin-left: 30px;
-  color:crimson;
-  font-size: 35px;
+  color:#85144b   ;
+  font-size: 6vh;
 
   
 }
 .AboutMe-myCvTitle{
-color: darkgreen;
+color:#F012BE;
 
 }
 .AboutMe-cvDiv {
